monitoring/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: monitoring
  namespace: monitoring
  labels:
    app.kubernetes.io/name: monitoring
  # annotations:
  #   kubernetes.io/ingress.class: "traefik"  # Change to "traefik" if using Traefik
  #   nginx.ingress.kubernetes.io/ssl-redirect: "false"  # Disable HTTPS redirect if using HTTP
spec:
  rules:
    - host: "grafana.__BASE-DOMAIN__"
      http:
        paths:
          - path: "/"
            pathType: Prefix
            backend:
              service:
                name: grafana 
                port:
                  number: 80  # Grafana HTTP port
    - host: "prometheus.__BASE-DOMAIN__"
      http:
        paths:
          - path: "/"
            pathType: Prefix
            backend:
              service:
                name: prometheus-operated
                port:
                  number: 9090  # Grafana HTTP port
